# Folder-Organizer

./: README.md  pyproject.toml  setup.py
LICENSE/: sortify.txt
src/sortify/: sortify.py
