[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "Sortify"
version = "0.1"
authors = [
  { name="Ruhel Ahmed Raktim", email="raktimahmed2019@outlook.com" },
]
description = "Command line tool to organize file in a directory"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/raktim707/Sortify.git"
